<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



        <ImageView
            android:id="@+id/list_image"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:background="@mipmap/microchip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>


        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_name"
            android:textColor="#040404"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018"/>


        <TextView
            android:id="@+id/sensor_vender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_vender"
            android:textColor="#040404"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.019"/>

        <TextView
            android:id="@+id/sensor_maxdelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_maxdelay"
            android:textColor="#040404"
            android:layout_marginTop="40dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.020"/>

        <TextView
            android:id="@+id/sensor_maxrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_range"
            android:textColor="#040404"
            android:layout_marginTop="60dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.021"/>

        <TextView
            android:id="@+id/sensor_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_power"
            android:textColor="#040404"
            android:layout_marginTop="80dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"/>

        <TextView
            android:id="@+id/sensor_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_resolution"
            android:textColor="#040404"
            android:layout_marginTop="100dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"/>

        <TextView
            android:id="@+id/sensor_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_version"
            android:textColor="#040404"
            android:layout_marginTop="120dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="140dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>